// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> component renders a tooltip correctly 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing:normal margin: 0;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 160px;
  overflow-wrap: break-word;
  padding: 8px;
  background-color: #000A25;
  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.15);
  color: #FFFFFF;
  border-radius: 4px;
  text-align: left;
  white-space: initial;
  position: absolute;
  z-index: 6;
  top: -10px;
  left: 0px;
  -webkit-transform: translate(-50%, -100%);
  -moz-transform: translate(-50%, -100%);
  -ms-transform: translate(-50%, -100%);
  transform: translate(-50%, -100%);
}

.emotion-0:after {
  content: "";
  position: absolute;
  border-width: 5px;
  border-style: solid;
  border-color: transparent;
}

.emotion-0:after {
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-top-color: #000A25;
}

<div
  class="emotion-0 emotion-1"
  data-testid="tooltip-content"
  direction="top"
  role="tooltip"
>
  Some content
</div>
`;

exports[`<Tooltip /> component renders a tooltip on the bottom side of the content 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing:normal margin: 0;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 160px;
  overflow-wrap: break-word;
  padding: 8px;
  background-color: #000A25;
  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.15);
  color: #FFFFFF;
  border-radius: 4px;
  text-align: left;
  white-space: initial;
  position: absolute;
  z-index: 6;
  top: 10px;
  left: 0px;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-0:after {
  content: "";
  position: absolute;
  border-width: 5px;
  border-style: solid;
  border-color: transparent;
}

.emotion-0:after {
  bottom: 100%;
  left: 50%;
  margin-left: -5px;
  border-bottom-color: #000A25;
}

<div
  class="emotion-0 emotion-1"
  data-testid="tooltip-content"
  direction="bottom"
  role="tooltip"
>
  Some content
</div>
`;

exports[`<Tooltip /> component renders a tooltip on the left side of the content 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing:normal margin: 0;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 160px;
  overflow-wrap: break-word;
  padding: 8px;
  background-color: #000A25;
  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.15);
  color: #FFFFFF;
  border-radius: 4px;
  text-align: left;
  white-space: initial;
  position: absolute;
  z-index: 6;
  top: 0px;
  left: -10px;
  -webkit-transform: translate(-100%, -50%);
  -moz-transform: translate(-100%, -50%);
  -ms-transform: translate(-100%, -50%);
  transform: translate(-100%, -50%);
}

.emotion-0:after {
  content: "";
  position: absolute;
  border-width: 5px;
  border-style: solid;
  border-color: transparent;
}

.emotion-0:after {
  top: 50%;
  left: 100%;
  margin-top: -5px;
  border-left-color: #000A25;
}

<div
  class="emotion-0 emotion-1"
  data-testid="tooltip-content"
  direction="left"
  role="tooltip"
>
  Some content
</div>
`;

exports[`<Tooltip /> component renders a tooltip on the right side of the content 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing:normal margin: 0;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 160px;
  overflow-wrap: break-word;
  padding: 8px;
  background-color: #000A25;
  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.15);
  color: #FFFFFF;
  border-radius: 4px;
  text-align: left;
  white-space: initial;
  position: absolute;
  z-index: 6;
  top: 0px;
  left: 10px;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-0:after {
  content: "";
  position: absolute;
  border-width: 5px;
  border-style: solid;
  border-color: transparent;
}

.emotion-0:after {
  top: 50%;
  right: 100%;
  margin-top: -5px;
  border-right-color: #000A25;
}

<div
  class="emotion-0 emotion-1"
  data-testid="tooltip-content"
  direction="right"
  role="tooltip"
>
  Some content
</div>
`;
